--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -6,6 +6,6 @@
     <title>Spring Boot Application</title>
 </head>
 <body>
-<h4 th:text="Welcome to the Pokedex Java: ">${myAttribute}</h4>
+<h4 th:text="${myAttribute}"></h4>
 </body>
 </html>
