--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -1,18 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset = "ISO-8859-1" />
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--    <link href = "css/styles.css" rel = "stylesheet"/>-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Spring Boot Application</title>
 </head>
 <body>
-<h4 th:text="${myAttribute}"></h4>
+<div class="container">
+    <h1 class="h4">Pokédex Java</h1>
 
-<section>
-    <article th:each="pokemon: ${pokeData}">
-        <p th:text="${pokemon}"></p>
-    </article>
-</section>
+    <div class="row row-cols-1 row-cols-md-3 g-4" >
+        <div class="col" th:each="pokemon: ${pokeData}">
+            <div class="card" >
+                <picture class="card-img-top">
+                    <img th:src="${pokemon.sprites.frontDefault}"  th:alt="${pokemon.name}" loading="lazy">
+                </picture>
+                <div class="card-body">
+                    <h5 class="h5 card-title" th:text="${pokemon.name}"></h5>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
