--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -7,18 +7,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Spring Boot Application</title>
 </head>
-<body>
+<body class="bg-black bg-gradient text-white">
 <div class="container">
     <h1 class="h4">Pokédex Java</h1>
 
     <div class="row row-cols-1 row-cols-md-3 g-4" >
         <div class="col" th:each="pokemon: ${pokeData}">
-            <div class="card" >
+            <div class="card bg-dark text-white" >
                 <picture class="card-img-top">
                     <img th:src="${pokemon.sprites.frontDefault}"  th:alt="${pokemon.name}" loading="lazy">
                 </picture>
                 <div class="card-body">
                     <h5 class="h5 card-title" th:text="${pokemon.name}"></h5>
+                    <p class="card-text"><small class="text-muted">Height: <span th:text="${pokemon.height} / 10"></span> m</small></p>
                 </div>
             </div>
         </div>
