--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -2,30 +2,40 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-<!--    <link href = "css/styles.css" rel = "stylesheet"/>-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Spring Boot Application</title>
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <!--    <link href = "css/styles.css" rel = "stylesheet"/>-->
+    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" rel="stylesheet">
+    <title>Pokédex Java</title>
 </head>
 <body class="bg-black bg-gradient text-white">
 <div class="container">
     <h1 class="h4">Pokédex Java</h1>
 
-    <div class="row row-cols-1 row-cols-md-3 g-4" >
+    <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col" th:each="pokemon: ${pokeData}">
-            <div class="card bg-dark text-white" >
+            <div class="card bg-dark text-white">
                 <picture class="card-img-top">
-                    <img th:src="${pokemon.sprites.frontDefault}"  th:alt="${pokemon.name}" loading="lazy">
+                    <img loading="lazy" th:alt="${pokemon.name}" th:src="${pokemon.sprites.frontDefault}">
                 </picture>
                 <div class="card-body">
                     <h5 class="h5 card-title" th:text="${pokemon.name}"></h5>
-                    <p class="card-text"><small class="text-muted">Height: <span th:text="${pokemon.height} / 10"></span> m</small></p>
+
+                    <p class="card-text">
+                        <details>
+                            <summary class="text-muted">More details</summary>
+                            <p>Height: <span th:text="${pokemon.height} / 10"></span> m</p>
+                            <p>Weight: <span th:text="${pokemon.weight} / 10"></span> kg</p>
+                        </details>
+                    </p>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script crossorigin="anonymous"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
