remove unused deps

--- a/app/src/main/resources/templates/index.html
+++ b/app/src/main/resources/templates/index.html
@@ -26,6 +26,7 @@
                             <summary class="text-muted">More details</summary>
                             <p>Height: <span th:text="${pokemon.height} / 10"></span> m</p>
                             <p>Weight: <span th:text="${pokemon.weight} / 10"></span> kg</p>
+                            <p>ID: <span th:text="${pokemon.id}"></span></p>
                         </details>
                     </p>
                 </div>
